# spore-contract

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  MUTANT.md  Makefile  README.md  RFC_PROXY_AGENT.md  capsule.toml  deployment.cluster_agent.toml
.github/workflows/: capsule.yaml  devnet.yaml
contracts/always-success/: Cargo.toml
contracts/always-success/src/: main.rs
contracts/cellular/: Cargo.toml
contracts/cellular-series/: Cargo.toml
contracts/cellular-series/src/: entry.rs  error.rs
contracts/cellular/src/: entry.rs  error.rs
contracts/cluster/: Cargo.toml  README.md  build.rs
contracts/cluster/src/: entry.rs  error.rs  hash.rs
contracts/cluster_agent/: Cargo.toml  README.md  build.rs
contracts/cluster_agent/src/: entry.rs  error.rs  hash.rs  main.rs
contracts/cluster_proxy/: Cargo.toml  README.md  build.rs
contracts/cluster_proxy/src/: entry.rs  error.rs  hash.rs  main.rs
contracts/group/: Cargo.toml
contracts/group/src/: entry.rs  error.rs
contracts/spore/: Cargo.toml  README.md  build.rs
contracts/spore/src/: entry.rs  error.rs  hash.rs  main.rs
contracts/spore/src/schema/: action.mol  action.rs
contracts/spore_extension_lua/: Cargo.toml  README.md  build.rs
contracts/spore_extension_lua/lua/: README.md
contracts/spore_extension_lua/src/: entry.rs  error.rs  hash.rs  main.rs
deployment/: README.md  deploy.sh  tx.json
deployment/frozen/: mainnet.toml  testnet.toml
deployment/migration-no-co-build/cluster/: 2024-01-05-115055.json
deployment/migration-no-co-build/cluster_proxy/: 2024-01-05-115210.json
deployment/migration-no-co-build/spore_extension_lua/: 2024-01-05-115243.json
deployment/migration-v2/cluster/: 2024-01-18-430076a6.json
deployment/migration-v2/cluster_agent/: 2024-01-18-430076a6.json
deployment/migration-v2/spore/: 2024-01-18-430076a6.json
deployment/migration/cluster/: 2023-12-28-051846.json  2023-12-29-070326.json  2023-12-29-090335.json  2023-12-30-041546.json  2024-01-11-143056.json  2024-01-17-063031.json  2024-01-17-080846.json  2024-01-19-aa7ae614.json
deployment/migration/cluster_agent/: 2023-12-28-052015.json  2023-12-29-070420.json  2023-12-29-090434.json  2023-12-30-041657.json  2023-12-31-145522.json  2024-01-05-115132.json  2024-01-11-143147.json  2024-01-17-063159.json  2024-01-17-081009.json
deployment/migration/cluster_proxy/: 2023-12-28-052120.json  2023-12-29-070454.json  2023-12-29-090508.json  2023-12-30-041800.json  2023-12-31-145419.json  2024-01-11-143206.json  2024-01-17-063116.json  2024-01-17-080920.json  2024-01-18-430076a6.json
deployment/migration/mainnet/cluster/: 2024-01-23-061641.json
deployment/migration/mainnet/spore/: 2024-01-23-0.2.2.json  2024-01-25-0.2.2-beta.1.json
deployment/migration/spore/: 2023-12-28-051649.json  2023-12-29-070138.json  2023-12-29-090203.json  2023-12-29-100645.json  2023-12-30-041446.json  2023-12-31-145255.json  2024-01-05-115020.json  2024-01-11-142958.json  2024-01-17-062908.json  2024-01-17-080725.json
deployment/migration/spore_extension_lua/: 2023-12-28-051924.json  2023-12-29-070241.json  2023-12-29-090252.json  2023-12-30-041513.json  2024-01-11-143252.json  2024-01-17-062938.json  2024-01-17-080751.json  2024-01-19-aa7ae614.json
deployment/migration/testnet/cluster/: 2024-03-16-0.2.2-beta.2.json
deployment/migration/testnet/cluster_agent/: 2024-01-19-aa7ae614.json  2024-03-16-0.2.2-beta.2.json
deployment/migration/testnet/cluster_proxy/: 2024-01-19-0.2.1.json  2024-03-16-0.2.2-beta.2.json
deployment/migration/testnet/spore/: 2024-01-19-aa7ae614.json  2024-03-16-0.2.2-beta.2.json
deployment/migration/testnet/spore_extension_lua/: 2024-03-16-0.2.2-beta.2.json
deployment/toml/: cluster.toml  cluster_agent.toml  spore.toml
deployment/toml/mainnet/: cluster_agent.toml  cluster_proxy.toml  spore_extension_lua.toml
deployment/toml/testnet/: cluster.toml  cluster_agent.toml  cluster_proxy.toml  spore.toml  spore_extension_lua.toml
docs/: MUTANT.md  RFC.md  RFC_PROXY_AGENT.md  VERSIONS.md
lib/constant/: Cargo.toml
lib/constant/src/: lib.rs
lib/errors/: Cargo.toml
lib/errors/src/: error.rs
lib/types/: Cargo.toml
lib/types/schemas/: action.mol  cellular.mol  spore.mol  spore_v1.mol  spore_v2.mol
lib/types/src/: lib.rs
lib/utils/: Cargo.toml
lib/utils/src/: lib.rs  mime.rs
tests/: Cargo.toml  build.rs
tests/res/: spore_raw.nft  spore_with_cluster.nft
tests/src/: lib.rs  tests.rs  utils.rs
tests/src/tests/: cluster.rs  mime.rs  mutant.rs  spore.rs  utils.rs
tests/src/utils/: co_build.rs  internal.rs  mod.rs
