[workspace]
members = [
    "lib/types",
    "lib/utils",
    "lib/errors",
    "lib/build",

    "contracts/spore",
    "contracts/cluster",
    "contracts/cluster_proxy",
    "contracts/cluster_agent",
    "contracts/spore_extension_lua",

    "tests",
]

[profile.release]
overflow-checks = true
strip = true
opt-level = 's'
lto = false
codegen-units = 1
