[workspace]
resolver = "2"
members = [
    "lib/types",
    "lib/utils",
    "lib/errors",
    "lib/build",

    "contracts/spore",
    "contracts/cluster",
    "contracts/cluster_proxy",
    "contracts/cluster_agent",
    "contracts/spore_extension_lua",

    "tests"
]
exclude = ["tests"]

[profile.release]
overflow-checks = true
strip = true
opt-level = 's'
lto = true
codegen-units = 1
