[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "contracts/spore_extension_lua",
  "contracts/cluster_proxy",
  "contracts/cluster_agent",
  "contracts/cluster",
  "contracts/spore",

  "lib/types",
  "lib/utils",
  "lib/errors",
  "lib/build",

  "tests",
]

[profile.release]
overflow-checks = true
strip = true
opt-level = 's'
lto = true
codegen-units = 1