[package]
name = "cluster"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = { git = "https://github.com/nervosnetwork/ckb-std", rev = "d74821c9" }

spore-types = { path = "../../lib/types" }
spore-utils = { path = "../../lib/utils" }
spore-errors = { path = "../../lib/errors" }
blake2b-ref = { version = "0.3", default-features = false }


[build-dependencies]
ckb-hash = "0.118.0"
spore-build-tools = { path = "../../lib/build" }

[features]
default = []
release_export = []