[package]
name = "spore"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = "0.15.3"
molecule = { version = "0.7.5", default-features = false }

spore-types = { path = "../../lib/types" }
spore-utils = { path = "../../lib/utils" }
spore-errors = { path = "../../lib/errors" }
kmp = { version = "0.1.1" }
ckb-transaction-cobuild = { git = "https://github.com/code-monad/ckb-transaction-cobuild-poc", rev="ba12af2469e475befdcc9e26bb4bbc527cf9702b"}

[build-dependencies]
ckb-hash = "0.116.1"
hex = "0.4.3"
spore-build-tools = { path = "../../lib/build" }