[package]
name = "spore"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = { git = "https://github.com/nervosnetwork/ckb-std", rev="d74821c9" }
molecule = { version = "0.8.0", default-features = false }

spore-types = { path = "../../lib/types" }
spore-utils = { path = "../../lib/utils" }
spore-errors = { path = "../../lib/errors" }
kmp = { version = "0.1.1" }
ckb-transaction-cobuild = { git = "https://github.com/code-monad/ckb-transaction-cobuild-poc", rev="086edaf3"}
#ckb-transaction-cobuild = {path = "../../../ckb-transaction-cobuild-poc/ckb-transaction-cobuild"}
[build-dependencies]
ckb-hash = "0.118.0"
hex = "0.4.3"
spore-build-tools = { path = "../../lib/build" }