[package]
name = "spore_extension_lua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.14.3"
spore-utils = { path = "../../lib/utils" }
spore-errors = { path = "../../lib/errors" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[build-dependencies]
ckb-hash = "0.112.1"
