[package]
name = "spore_extension_lua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.14.3"
spore-utils = { path = "../../lib/utils" }
spore-errors = { path = "../../lib/errors" }

[build-dependencies]
ckb-hash = "0.112.1"

[features]
default = []
release_export = []
