[package]
name = "spore-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = { git = "https://github.com/nervosnetwork/ckb-std", rev = "d74821c9" }
blake2b-ref = { version = "0.3", default-features = false }
spore-types = { path = "../types" }
spore-errors = { path = "../errors" }
ckb-transaction-cobuild = { git = "https://github.com/code-monad/ckb-transaction-cobuild-poc", rev = "086edaf3" }
molecule = { version = "0.8.0", default-features = false }